# shorten-url-leptos

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
