[package]
name = "amazon_url_shortener_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
url = "2.5.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Clipboard", "Navigator"]
